bindings/dart/prism_core_bindings/lib/src/prism_core_bindings.g.dart

// Generated by ffigen from include/prism/prism_core.h — DO NOT EDIT.
// ignore_for_file: type=lint, doc_directive_unknown

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Generated from the Prism Engine core C ABI. DO NOT EDIT by hand.
class PrismCoreBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  PrismCoreBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  PrismCoreBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// "MAJOR.MINOR.PATCH" of the linked library. Compare against the macros above.
  ffi.Pointer<ffi.Char> prism_version() {
    return _prism_version();
  }

  late final _prism_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'prism_version');
  late final _prism_version =
      _prism_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Static, human-readable description; never NULL.
  ffi.Pointer<ffi.Char> prism_result_description(
    prism_result result,
  ) {
    return _prism_result_description(
      result.value,
    );
  }

  late final _prism_result_descriptionPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.UnsignedInt)>>(
      'prism_result_description');
  late final _prism_result_description = _prism_result_descriptionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// All defaults (aqademiq profile, UTC, spec cadence).
  prism_config prism_config_default() {
    return _prism_config_default();
  }

  late final _prism_config_defaultPtr =
      _lookup<ffi.NativeFunction<prism_config Function()>>(
          'prism_config_default');
  late final _prism_config_default =
      _prism_config_defaultPtr.asFunction<prism_config Function()>();

  /// Create an engine. `config` may be NULL for all defaults. On success writes the new
  /// handle to *out_core. The handle must be released with prism_destroy.
  prism_result prism_create(
    ffi.Pointer<prism_config> config,
    ffi.Pointer<ffi.Pointer<prism_core>> out_core,
  ) {
    return prism_result.fromValue(_prism_create(
      config,
      out_core,
    ));
  }

  late final _prism_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<prism_config>,
              ffi.Pointer<ffi.Pointer<prism_core>>)>>('prism_create');
  late final _prism_create = _prism_createPtr.asFunction<
      int Function(
          ffi.Pointer<prism_config>, ffi.Pointer<ffi.Pointer<prism_core>>)>();

  /// Stops everything still running (inference thread, built-in device) and frees the
  /// handle. NULL is a no-op.
  void prism_destroy(
    ffi.Pointer<prism_core> core,
  ) {
    return _prism_destroy(
      core,
    );
  }

  late final _prism_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<prism_core>)>>(
          'prism_destroy');
  late final _prism_destroy =
      _prism_destroyPtr.asFunction<void Function(ffi.Pointer<prism_core>)>();

  /// Load a scene manifest (scenes.json; stem paths resolve relative to it). Decodes and
  /// preloads every stem of the default scene — file I/O happens HERE, never at render
  /// time. Call once, before prism_start / any rendering. INVALID_STATE after start.
  prism_result prism_load_scene(
    ffi.Pointer<prism_core> core,
    ffi.Pointer<ffi.Char> scenes_json_path,
  ) {
    return prism_result.fromValue(_prism_load_scene(
      core,
      scenes_json_path,
    ));
  }

  late final _prism_load_scenePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<prism_core>,
              ffi.Pointer<ffi.Char>)>>('prism_load_scene');
  late final _prism_load_scene = _prism_load_scenePtr.asFunction<
      int Function(ffi.Pointer<prism_core>, ffi.Pointer<ffi.Char>)>();

  /// Start the engine: emits the neutral PSV (spec §6) and launches the internal inference
  /// thread (evaluates on the cadence + significant-change rule). Requires a loaded scene.
  /// INVALID_STATE if already started. Restart after prism_stop is allowed; the restart's
  /// neutral vector continues the sequence (see prism_psv.sequence).
  prism_result prism_start(
    ffi.Pointer<prism_core> core,
  ) {
    return prism_result.fromValue(_prism_start(
      core,
    ));
  }

  late final _prism_startPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<prism_core>)>>('prism_start');
  late final _prism_start =
      _prism_startPtr.asFunction<int Function(ffi.Pointer<prism_core>)>();

  /// Stop the inference thread (and the built-in device if running). Idempotent.
  prism_result prism_stop(
    ffi.Pointer<prism_core> core,
  ) {
    return prism_result.fromValue(_prism_stop(
      core,
    ));
  }

  late final _prism_stopPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<prism_core>)>>('prism_stop');
  late final _prism_stop =
      _prism_stopPtr.asFunction<int Function(ffi.Pointer<prism_core>)>();

  /// --- Event ingress -------------------------------------------------------------------
  /// Platform shells capture raw events and forward them; no inference logic lives on the
  /// host side. Timestamps are epoch milliseconds from the host clock. App identity never
  /// crosses this boundary: a switch is a bare timestamp, idle is a duration, tasks are
  /// due instants plus priorities. Thread-safe; never call from the render callback.
  prism_result prism_report_app_switch(
    ffi.Pointer<prism_core> core,
    int t_ms,
  ) {
    return prism_result.fromValue(_prism_report_app_switch(
      core,
      t_ms,
    ));
  }

  late final _prism_report_app_switchPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<prism_core>, ffi.Int64)>>('prism_report_app_switch');
  late final _prism_report_app_switch = _prism_report_app_switchPtr
      .asFunction<int Function(ffi.Pointer<prism_core>, int)>();

  prism_result prism_report_idle(
    ffi.Pointer<prism_core> core,
    int t_ms,
    int idle_ms,
  ) {
    return prism_result.fromValue(_prism_report_idle(
      core,
      t_ms,
      idle_ms,
    ));
  }

  late final _prism_report_idlePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<prism_core>, ffi.Int64,
              ffi.Int64)>>('prism_report_idle');
  late final _prism_report_idle = _prism_report_idlePtr
      .asFunction<int Function(ffi.Pointer<prism_core>, int, int)>();

  /// Replace the full task-deadline snapshot (matches how hosts observe task lists).
  /// `tasks` may be NULL when `count` is 0 (an empty list is a valid state). Task lists are
  /// human-scale: count > 4096 is rejected as INVALID_ARGUMENT (this also shields the
  /// boundary from negative lengths cast to size_t). No C++ exception ever crosses this
  /// ABI; internal failures surface as error codes.
  prism_result prism_report_task_deadlines(
    ffi.Pointer<prism_core> core,
    ffi.Pointer<prism_task_deadline> tasks,
    int count,
  ) {
    return prism_result.fromValue(_prism_report_task_deadlines(
      core,
      tasks,
      count,
    ));
  }

  late final _prism_report_task_deadlinesPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<prism_core>,
              ffi.Pointer<prism_task_deadline>,
              ffi.Size)>>('prism_report_task_deadlines');
  late final _prism_report_task_deadlines =
      _prism_report_task_deadlinesPtr.asFunction<
          int Function(ffi.Pointer<prism_core>,
              ffi.Pointer<prism_task_deadline>, int)>();

  /// Copy the most recently emitted PSV into *out. INVALID_STATE before prism_start (the
  /// cold-start vector exists from start onward). Thread-safe.
  prism_result prism_get_psv(
    ffi.Pointer<prism_core> core,
    ffi.Pointer<prism_psv> out,
  ) {
    return prism_result.fromValue(_prism_get_psv(
      core,
      out,
    ));
  }

  late final _prism_get_psvPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<prism_core>,
              ffi.Pointer<prism_psv>)>>('prism_get_psv');
  late final _prism_get_psv = _prism_get_psvPtr.asFunction<
      int Function(ffi.Pointer<prism_core>, ffi.Pointer<prism_psv>)>();

  /// Sample rate of the loaded scene's stems (0 before a scene is loaded). Mono float32.
  int prism_sample_rate(
    ffi.Pointer<prism_core> core,
  ) {
    return _prism_sample_rate(
      core,
    );
  }

  late final _prism_sample_ratePtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<prism_core>)>>(
          'prism_sample_rate');
  late final _prism_sample_rate =
      _prism_sample_ratePtr.asFunction<int Function(ffi.Pointer<prism_core>)>();

  /// Render `frame_count` mono float32 frames into out_frames. Real-time safe: wait-free,
  /// no allocation, no locks, no I/O, no logging. Single audio thread only. Before a scene
  /// is loaded, fills silence and returns INVALID_STATE.
  prism_result prism_render(
    ffi.Pointer<prism_core> core,
    ffi.Pointer<ffi.Float> out_frames,
    int frame_count,
  ) {
    return prism_result.fromValue(_prism_render(
      core,
      out_frames,
      frame_count,
    ));
  }

  late final _prism_renderPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<prism_core>,
              ffi.Pointer<ffi.Float>, ffi.Uint32)>>('prism_render');
  late final _prism_render = _prism_renderPtr.asFunction<
      int Function(ffi.Pointer<prism_core>, ffi.Pointer<ffi.Float>, int)>();

  /// Open and start the built-in playback device (renders internally; do not also call
  /// prism_render). Requires a loaded scene. INVALID_STATE if already running.
  prism_result prism_device_start(
    ffi.Pointer<prism_core> core,
  ) {
    return prism_result.fromValue(_prism_device_start(
      core,
    ));
  }

  late final _prism_device_startPtr = _lookup<
          ffi
          .NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<prism_core>)>>(
      'prism_device_start');
  late final _prism_device_start = _prism_device_startPtr
      .asFunction<int Function(ffi.Pointer<prism_core>)>();

  /// Stop and close the built-in device. Idempotent.
  prism_result prism_device_stop(
    ffi.Pointer<prism_core> core,
  ) {
    return prism_result.fromValue(_prism_device_stop(
      core,
    ));
  }

  late final _prism_device_stopPtr = _lookup<
          ffi
          .NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<prism_core>)>>(
      'prism_device_stop');
  late final _prism_device_stop =
      _prism_device_stopPtr.asFunction<int Function(ffi.Pointer<prism_core>)>();
}

typedef __int8_t = ffi.SignedChar;
typedef Dart__int8_t = int;
typedef __uint8_t = ffi.UnsignedChar;
typedef Dart__uint8_t = int;
typedef __int16_t = ffi.Short;
typedef Dart__int16_t = int;
typedef __uint16_t = ffi.UnsignedShort;
typedef Dart__uint16_t = int;
typedef __int32_t = ffi.Int;
typedef Dart__int32_t = int;
typedef __uint32_t = ffi.UnsignedInt;
typedef Dart__uint32_t = int;
typedef __int64_t = ffi.LongLong;
typedef Dart__int64_t = int;
typedef __uint64_t = ffi.UnsignedLongLong;
typedef Dart__uint64_t = int;
typedef __darwin_intptr_t = ffi.Long;
typedef Dart__darwin_intptr_t = int;
typedef __darwin_natural_t = ffi.UnsignedInt;
typedef Dart__darwin_natural_t = int;
